<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSignup"
    tools:context=".signup">


    <!--<view
        android:id="@+id/vidula"
        class="androidx.appcompat.widget.ActionMenuView"
        id="@+id/view"
        android:layout_width="334dp"
        android:layout_height="606dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:layout_centerInParent="true"
        android:background="@color/browser_actions_text_color"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.495" />-->
    <TextView
        android:id="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_width="309dp"
        android:layout_height="48dp"
        android:text="@string/self_register"
        android:textColor="@color/browser_actions_bg_grey"
        android:textSize="36sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/nametxt"
        android:layout_width="245dp"
        android:layout_height="39dp"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/com_facebook_auth_dialog_cancel_background"
        android:drawableLeft="@drawable/ic_action_name"
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/tertiary_text_light" />

    <EditText
        android:id="@+id/emailtxt"
        android:layout_centerHorizontal="true"
        android:layout_width="245dp"
        android:layout_height="39dp"
        android:layout_below="@+id/nametxt"
        android:layout_marginTop="30dp"
        android:background="@drawable/com_facebook_auth_dialog_cancel_background"
        android:drawableLeft="@drawable/ic_action_name3"
        android:ems="10"
        android:hint="@string/email_enter"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/tertiary_text_light" />

    <EditText
        android:id="@+id/passwordtxt"
        android:layout_below="@+id/emailtxt"
        android:layout_centerHorizontal="true"
        android:layout_width="245dp"
        android:layout_height="39dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/com_facebook_auth_dialog_cancel_background"
        android:drawableLeft="@drawable/ic_action_name2"
        android:ems="10"
        android:hint="@string/password_enter"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/tertiary_text_light" />

    <EditText
        android:id="@+id/passwordchecktxt"
        android:layout_below="@+id/passwordtxt"
        android:layout_centerHorizontal="true"
        android:layout_width="245dp"
        android:layout_height="39dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/com_facebook_auth_dialog_cancel_background"
        android:drawableLeft="@drawable/ic_action_name2"
        android:ems="10"
        android:hint="@string/passwordcheck_enter"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/tertiary_text_light" />

    <EditText
        android:id="@+id/etphone"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/passwordchecktxt"
        android:layout_width="245dp"
        android:layout_height="39dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/com_facebook_auth_dialog_cancel_background"
        android:drawableLeft="@drawable/ic_action_name6"
        android:ems="10"
        android:hint="@string/phone_num"
        android:inputType="number"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/tertiary_text_light" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/etphone"
        android:layout_width="258dp"
        android:layout_height="39dp"
        android:layout_marginTop="30dp"
        android:text="@string/conditions"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light" />

    <Button
        android:id="@+id/signupbtn"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/checkBox"
        android:layout_width="151dp"
        android:layout_height="49dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_corner_button"
        android:text="등록"
        android:textColor="@android:color/background_light"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/regsignin"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:text="@string/already_user"
        android:textColor="@android:color/background_light" />

<!--    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="48dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        app:srcCompat="@mipmap/ic_launcher2" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="93dp"
        android:layout_height="18dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/secure"
        android:textColor="@android:color/tertiary_text_light" />-->

</RelativeLayout>