<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".personalprofile">

    <view
        android:id="@+id/view6"
        class="androidx.appcompat.widget.ActionMenuView"
        id="@+id/view4"
        android:layout_centerHorizontal="true"
        android:layout_width="500dp"
        android:layout_height="152dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/coverimageofuser" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="150dp"
        android:layout_height="126dp"
        android:layout_alignBottom="@+id/view6"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-60dp"
        app:srcCompat="@mipmap/ic_launcher6" />

    <TextView
        android:id="@+id/textView21"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/view6"
        android:layout_width="100dp"
        android:layout_height="37dp"
        android:layout_marginStart="8dp"
        android:text="@string/prsnl_prof"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnsignout"
        android:layout_below="@+id/view6"
        android:layout_width="130dp"
        android:layout_height="33dp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/custom_login_button1"
        android:text="@string/signout_btn"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/textView2"
        android:layout_below="@+id/textView21"
        android:layout_width="70dp"
        android:layout_height="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/nam"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_below="@+id/textView2"
        android:layout_width="70dp"
        android:layout_height="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/email"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_below="@+id/textView13"
        android:layout_width="70dp"
        android:layout_height="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="비밀번호"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView24"
        android:layout_below="@+id/textView17"
        android:layout_width="70dp"
        android:layout_height="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="전화번호"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnEditinfo"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:background="#000000"
        android:text="@string/editdetails_btn"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnDeleteAcc"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="#000000"
        android:text="@string/deleteAcc_btn"
        android:textColor="#FFFFFF" />

    <ImageView
        android:id="@+id/clickfeedback"
        android:layout_below="@+id/textView24"
        android:layout_width="72dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        app:srcCompat="@mipmap/ic_feed" />

    <TextView
        android:id="@+id/clickfeedback2"
        android:layout_toEndOf="@+id/clickfeedback"
        android:layout_below="@+id/textView24"
        android:layout_width="140dp"
        android:layout_height="27dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="35dp"
        android:clickable="true"
        android:text="@string/show_feedback"
        android:textColor="#383535"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/rtrdashboard"
        android:layout_below="@+id/clickfeedback"
        android:layout_width="64dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        app:srcCompat="@mipmap/ic_dashboard" />

    <TextView
        android:id="@+id/rtrdashboard2"
        android:layout_toEndOf="@+id/rtrdashboard"
        android:layout_below="@+id/clickfeedback"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:text="@string/proceed_feedback"
        android:textColor="#383535"
        android:textSize="14sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/etprofName"
        android:layout_below="@+id/textView21"
        android:layout_toEndOf="@+id/textView2"
        android:layout_width="300dp"
        android:layout_height="37dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etprofEmail"
        android:layout_below="@+id/etprofName"
        android:layout_toEndOf="@+id/textView13"
        android:layout_width="300dp"
        android:layout_height="37dp"
        android:layout_marginStart="10dp"
        android:clickable="false"
        android:editable="false"
        android:ems="10"
        android:focusableInTouchMode="false"
        android:inputType="textPersonName"
        android:textSize="14sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/etprofPhone"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.549" />

    <Button
        android:id="@+id/btnprofchangepass"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="#A87452"
        android:fadingEdge="horizontal"
        android:text="Change Password"
        android:textColor="#F5F2F2"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView17"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.627" />

</RelativeLayout>