<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSignup"
    tools:context=".act2">

    <ImageView
        android:id="@+id/appimage"
        android:layout_below="@+id/appname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@mipmap/ic_launcher_qnaicon"
        />
    <TextView
        android:id="@+id/appname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:layout_width="240dp"
        android:layout_height="70dp"
        android:text="모 야 모"
        android:textSize="50dp"
        android:textStyle="bold|italic"
        android:gravity="center_horizontal"
        />

    <EditText
        android:id="@+id/logemail"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/appimage"
        android:layout_width="238dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:drawableLeft="@drawable/ic_action_name"
        android:ems="10"
        android:hint="@string/email_enter"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_light"
        android:textColorLink="#3D2B2A" />


    <EditText
        android:id="@+id/logpassword"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/logemail"
        android:layout_width="238dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:drawableLeft="@drawable/ic_action_name2"
        android:ems="10"
        android:hint="@string/user_password"
        android:inputType="textPassword"
        android:textColor="@android:color/background_light" />

    <ImageButton
        android:id="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/logpassword"
        android:layout_width="148dp"
        android:layout_height="45dp"
        android:layout_marginTop="50dp"
        android:adjustViewBounds="true"
        android:baselineAlignBottom="false"
        android:cropToPadding="false"
        android:layerType="none"
        android:scaleType="centerCrop"
        android:scrollbarSize="6dp"
        android:scrollbarStyle="insideInset"
        app:srcCompat="@drawable/btnlogin1" />

    <TextView
        android:id="@+id/forgot"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btnLogin"
        android:layout_width="143dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:clickable="true"
        android:text="@string/forgot_password"
        android:textColor="#EBF3F2"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/signup"
        android:layout_below="@+id/logpassword"
        android:layout_alignRight="@+id/logpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:text="@string/create"
        android:textColor="#EDF3F2" />

    <TextView
        android:id="@+id/tvinfo"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="남은 로그인 시도 횟수:"
        android:textColor="@color/colorAccent" />

</RelativeLayout>